--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.8.0"
 awesomeValidation = "4.3"
+checkview = "v1.2"
 firebaseBom = "33.10.0"
 glide = "4.16.0"
 junit = "4.13.2"
@@ -17,6 +18,7 @@ pinview = "1.4.4"
 [libraries]
 android-otpview-pinview-otpview = { module = "com.github.mukeshsolanki.android-otpview-pinview:otpview", version.ref = "otpviewVersion" }
 awesome-validation = { module = "com.basgeekball:awesome-validation", version.ref = "awesomeValidation" }
+checkview = { module = "com.github.cdflynn:checkview", version.ref = "checkview" }
 firebase-auth = { module = "com.google.firebase:firebase-auth" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-database = { module = "com.google.firebase:firebase-database" }
